--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
        <h1>Hello world from HTML</h1>
     </div>
 
-    
-    <script
-     crossorigin src="https://unpkg.com/react@18/umd/react.development.js">
-    </script>
-    <script 
-    crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-    </script>
-
     <!-- <script>
       const heading=document.createElement("h1");
       heading.innerHTML="Hello world from Javascript";
@@ -25,7 +17,7 @@
       root.appendChild(heading);
     </script> -->
 
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 
 </body>
 </html>
