--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
 </head>
 <body>
     <div id="root">
-       <h1>Hello world from HTML</h1>
+       <h1>Not rendered</h1>
     </div>
-
-    <!-- <script>
-      const heading=document.createElement("h1");
-      heading.innerHTML="Hello world from Javascript";
-      const root=document.getElementById("root");
-      root.appendChild(heading);
-    </script> -->
 
     <script type="module" src="./App.js"></script>
 
