--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div class="bg-slate-600 text-yellow-400" id="root">
+    <div id="root">
        <h1>Not rendered</h1>
     </div>
 
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 
 </body>
 </html>
